--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -119,8 +120,9 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">HTML5 & CSS Developer</div>
-					<div class="main_title">Jeremy Smith</div>
+					
+					<div class="main_title">Ashutosh Katiyar</div>
+					<div class="main_subtitle">UI Developer</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 					<div class="about_content">
