--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Smith<span>.</span>CV</div>
+			<div class="logo">Katiyar<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li class="active"><a href="about.html">About</a></li>
@@ -66,7 +66,8 @@
 			<div class="general_info d-flex flex-xl-column flex-md-row flex-column">
 				<div>
 					<div class="general_info_image">
-						<div class="background_image" style="background-image:url(images/smith.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/katiyar
+						.jpg)"></div>
 						<div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
@@ -79,7 +80,7 @@
 						<ul class="general_info_list">
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_1.png" alt=""></div>
-								<div class="general_info_text">Name: <span>Jeremy Smith</span></div>
+								<div class="general_info_text">Name: <span>Ashutosh Katiyar</span></div>
 							</li>
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"></div>
