--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			</div>
 		</div>
 	</div>
+
 		</div>
 	</header>
 
@@ -66,8 +67,7 @@
 			<div class="general_info d-flex flex-xl-column flex-md-row flex-column">
 				<div>
 					<div class="general_info_image">
-						<div class="background_image" style="background-image:url(images/katiyar
-						.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/katiyar.jpg)"></div>
 						<div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
@@ -130,7 +130,9 @@
 					<div class="about_content">
 						<div class="about_title">Description</div>
 						<div class="about_text">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit.</p>
+							<p>-Develop new UI functionality for multithreaded user-facing applications running on touchscreen devices, using AngularJS
+								-Designed and developed front-end for 20+ websites, using jQuery, AJAX and Angular JS
+							</p>
 						</div>
 
 						<!-- Loaders -->
