--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 					<div class="about_content">
 						<div class="about_title">Description</div>
 						<div class="about_text">
-							<p>-Develop new UI functionality for multithreaded user-facing applications running on touchscreen devices, using AngularJS
-								-Designed and developed front-end for 20+ websites, using jQuery, AJAX and Angular JS
+							<p>Develop new UI functionality for multithreaded user-facing applications running on touchscreen devices, using AngularJS
+								.Designed and developed front-end for 20+ websites, using jQuery, AJAX and Angular JS
 							</p>
 						</div>
 
