--- a/skills.html
+++ b/skills.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -119,8 +121,9 @@
 
 			<div class="main_content">
 				<div class="main_title_container d-flex flex-column align-items-start justify-content-end">
-					<div class="main_subtitle">What I am good at</div>
-					<div class="main_title">My Skills</div>
+					
+					<div class="main_title">My Skills</div><br>
+					<div class="main_subtitle">I AM GOOD AT</div>
 				</div>
 				<div class="main_content_scroll mCustomScrollbar" data-mcs-theme="minimal-dark">
 
@@ -130,8 +133,7 @@
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-xl-6">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit.</p>
-									</div>
+										<p>Languages/Tools HTML/HTML5, CSS/CSS3, DOM, JavaScript, jquery, Angulat.js <br>Source Control: Git </div>
 									<div class="col-xl-6">
 										<p>Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.</p>
 									</div>
