--- a/skills.html
+++ b/skills.html
@@ -22,11 +22,11 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Smith<span>.</span>CV</div>
+			<div class="logo">Katiyar<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="about.html">About</a></li>
-					<li class="active"><a href="skills.html">Skills</a></li>
+					<li class="active"><a href="katiyar.html">Katiyar</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="education.html">Education</a></li>
