--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 						<div class="about_title">Description</div>
 						<div class="about_text">
 							<p>Develop new UI functionality for multithreaded user-facing applications running on touchscreen devices, using AngularJS
-								.Designed and developed front-end for 20+ websites, using jQuery, AJAX and Angular JS
+								.Designed and developed front-end for 20+ websites, using jQuery, AJAX and Angular JS.
 							</p>
 						</div>
 
