--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,9 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Katiyar<span>.</span>CV</div>
+			<div class="logo">
+				
+				<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="about.html">About</a></li>
@@ -136,8 +138,7 @@
 									<div class="col-xl-6">
 										<p>Languages/Tools HTML/HTML5, CSS/CSS3, DOM, JavaScript, jquery, Angulat.js <br>Source Control: Git </div>
 									<div class="col-xl-6">
-										<p>Phasellus vitae sapien porttitor, dignissim quam sit amet, aliquam lorem. Fusce id ligula non risus mollis consectetur. Nam lobortis, erat quis pulvinar dignissim, velit ligula ullamcorper ipsum, at sodales elit odio at velit. Sed a est a quam mattis suscipit. Proin et faucibus diam.</p>
-									</div>
+											</div>
 								</div>
 							</div>
 						</div>
@@ -216,7 +217,6 @@
 								<div class="milestone_counter" data-end-value="1000" data-sign-before="+">0</div>
 								<div class="milestone_text">Happy Clients</div>
 							</div>
-
 							<!-- Milestone -->
 							<div class="milestone text-center">
 								<div class="milestone_icon"><img src="images/icon_8.png" alt=""></div>
