--- a/skills.html
+++ b/skills.html
@@ -207,27 +207,27 @@
 							<!-- Milestone -->
 							<div class="milestone text-center">
 								<div class="milestone_icon"><img src="images/icon_6.png" alt=""></div>
-								<div class="milestone_counter" data-end-value="14">0</div>
+								<div class="milestone_counter" data-end-value="1">0</div>
 								<div class="milestone_text">Years of Experience</div>
 							</div>
 
 							<!-- Milestone -->
 							<div class="milestone text-center">
 								<div class="milestone_icon"><img src="images/icon_7.png" alt=""></div>
-								<div class="milestone_counter" data-end-value="1000" data-sign-before="+">0</div>
+								<div class="milestone_counter" data-end-value="11" data-sign-before="+">0</div>
 								<div class="milestone_text">Happy Clients</div>
 							</div>
 							<!-- Milestone -->
-							<div class="milestone text-center">
+							<!-- <div class="milestone text-center">
 								<div class="milestone_icon"><img src="images/icon_8.png" alt=""></div>
 								<div class="milestone_counter" data-end-value="14" data-sign-after="k">0</div>
 								<div class="milestone_text">Followers on FB</div>
-							</div>
+							</div> -->
 
 							<!-- Milestone -->
 							<div class="milestone text-center">
 								<div class="milestone_icon"><img src="images/icon_9.png" alt=""></div>
-								<div class="milestone_counter" data-end-value="732">0</div>
+								<div class="milestone_counter" data-end-value="9">0</div>
 								<div class="milestone_text">Finished Projects</div>
 							</div>
 
