--- a/skills.html
+++ b/skills.html
@@ -24,7 +24,7 @@
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
 			<div class="logo">
 				
-				<span>.</span>CV</div>
+					<div class="logo">Katiyar<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="about.html">About</a></li>
