--- a/education.html
+++ b/education.html
@@ -20,7 +20,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Smith<span>.</span>CV</div>
+			<div class="logo">Katiyar<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="about.html">About</a></li>
@@ -65,7 +65,7 @@
 			<div class="general_info d-flex flex-xl-column flex-md-row flex-column">
 				<div>
 					<div class="general_info_image">
-						<div class="background_image" style="background-image:url(images/smith.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/katiyar.jpg)"></div>
 						<div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
@@ -130,12 +130,12 @@
 						
 						<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2010</div></div>
-							<div><div class="edu_image"><img src="images/edu_1.png" alt=""></div></div>
+							<div><div class="edu_year">2014-2018</div></div>
+							<div><div class="edu_image"><img src="images/college.jpg" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div class="edu_title">University of Colorado</div>
-									<div class="edu_subtitle">Developer Diploma PhD</div>
+									<div class="edu_title">R D Engineering College</div>
+									<div class="edu_subtitle">B.Tech</div>
 								</div>
 								<div class="edu_text">
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
@@ -145,12 +145,12 @@
 
 						<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2008</div></div>
+							<div><div class="edu_year">2013</div></div>
 							<div><div class="edu_image"><img src="images/edu_2.png" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div class="edu_title">Graphic School</div>
-									<div class="edu_subtitle">Graphic Design Course</div>
+									<div class="edu_title">School</div>
+									<!-- <div class="edu_subtitle"></div> -->
 								</div>
 								<div class="edu_text">
 									<p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
@@ -160,12 +160,12 @@
 
 						<!-- Education Item -->
 						<div class="edu_item d-flex flex-lg-row flex-column align-items-start justfy-content-start">
-							<div><div class="edu_year">2007</div></div>
+							<div><div class="edu_year">2011</div></div>
 							<div><div class="edu_image"><img src="images/edu_3.png" alt=""></div></div>
 							<div class="edu_content">
 								<div class="edu_title_container">
-									<div class="edu_title">Colorado High School</div>
-									<div class="edu_subtitle">Bachelor Degree - Developer</div>
+									<div class="edu_title">High School</div>
+									<div class="edu_subtitle"></div>
 								</div>
 								<div class="edu_text">
 									<p>Consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
