--- a/experience.html
+++ b/experience.html
@@ -20,7 +20,7 @@
 
 	<header class="header">
 		<div class="header_content d-flex flex-row align-items-center justify-content-start">
-			<div class="logo">Smith<span>.</span>CV</div>
+			<div class="logo">Katiyar<span>.</span>CV</div>
 			<div class="main_nav d-flex flex-row align-items-end justify-content-start">
 				<ul class="d-flex flex-row align-items-center justify-content-start">
 					<li><a href="about.html">About</a></li>
@@ -65,7 +65,7 @@
 			<div class="general_info d-flex flex-xl-column flex-md-row flex-column">
 				<div>
 					<div class="general_info_image">
-						<div class="background_image" style="background-image:url(images/smith.jpg)"></div>
+						<div class="background_image" style="background-image:url(images/katiyar.jpg)"></div>
 						<div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
@@ -129,7 +129,7 @@
 					<div class="experience">
 						
 						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+						<!-- <div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
 							<div><div class="exp_time">2016-Present</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
@@ -142,8 +142,8 @@
 							</div>
 						</div>
 
-						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+						Experience Item -->
+						<!-- <div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
 							<div><div class="exp_time">2014-2016</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
@@ -154,11 +154,11 @@
 									<p>Ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<!-- Experience Item -->
 						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
-							<div><div class="exp_time">2012-2014</div></div>
+							<div><div class="exp_time">2017-2018</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
 									<div class="exp_title">Entry Level Developer</div>
@@ -171,7 +171,7 @@
 						</div>
 
 						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+						<!-- <div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
 							<div><div class="exp_time">2011-2012</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
@@ -182,10 +182,10 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<!-- Experience Item -->
-						<div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
+						<!-- <div class="exp_item d-flex flex-md-row flex-column align-items-start justify-content-start">
 							<div><div class="exp_time">2010-2011</div></div>
 							<div class="exp_content">
 								<div class="exp_title_container">
@@ -196,7 +196,7 @@
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Proin vitae tortor nec risus tristique efficitur. Aliquam luctus est urna, id aliquam orci tempus sed. Aenean sit amet leo id enim dapibus eleifend. Phasellus ut erat dapibus, tempor sapien non, porta urna.</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 					</div>
 
