--- a/testimonials.html
+++ b/testimonials.html
@@ -85,11 +85,11 @@
 							</li>
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"></div>
-								<div class="general_info_text">Location: <span>London UK</span></div>
+								<div class="general_info_text">Location: <span>Uttar pradesh</span></div>
 							</li>
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_2.png" alt=""></div>
-								<div class="general_info_text">Date of Birth: <span>August 25, 1991</span></div>
+								<div class="general_info_text">Date of Birth: <span>March 20, 1997</span></div>
 							</li>
 							<li class="d-flex flex-row align-items-center justify-content-start">
 								<div class="general_info_icon d-flex flex-column align-items-start justify-content-center"><img src="images/icon_3.png" alt=""></div>
