--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,9 @@
 										<div class="map">
 											<div id="google_map" class="google_map">
 												<div class="map_container">
+														<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.9195224880536!2d77.27344541455959!3d28.632173990849132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfcad6dceb045%3A0x389c81aab4362c45!2sGali+Number+11%2C+Block+D%2C+Laxmi+Nagar%2C+Delhi%2C+110092!5e0!3m2!1sen!2sin!4v1539426413569" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 													<div id="map"></div>
+													
 												</div>
 											</div>
 										</div>
@@ -181,7 +183,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/mCustomScrollbar/jquery.mCustomScrollbar.js"></script>
 <script src="plugins/easing/easing.js"></script>
 <script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script> -->
 <script src="js/contact.js"></script>
 </body>
 </html>
