--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
 					<li><a href="testimonials.html">Testimonials</a></li>
 					<li class="active"><a href="contact.html">Contact</a></li>
 				</ul>
-				<div class="header_button ml-auto">
+				<!-- <div class="header_button ml-auto">
 					<a href="#">Available for freelance work</a>
 					<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
-				</div>
+				</div> -->
 			</div>
 			<!-- Menu -->
 	<div class="menu">
@@ -66,10 +66,10 @@
 				<div>
 					<div class="general_info_image">
 						<div class="background_image" style="background-image:url(images/Katiyar.jpg)"></div>
-						<div class="header_button_2">
+						<!-- <div class="header_button_2">
 							<a href="#">Available for freelance work</a>
 							<div class="d-flex flex-column align-items-center justify-content-center"><img src="images/download.png" alt=""></div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="general_info_content">
@@ -133,7 +133,7 @@
 								<!-- Contact Form -->
 								<div class="col-xl-6">
 									<div class="contact_text">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien porttitor, dignissim quam sit ame. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae sapien.</p>
+								<p>I have experience in UI Development,I am working in Heera soft pvt ltd. as a UI deveper. You can contact me from here. </p>
 									</div>
 									<div class="contact_form_container">
 										<form action="#" id="contact_form" class="contact_form clearfix">
